2009-02-03  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: get_table_names_from_database(): Filter out some 
	extra internal table names which may be created/reported by newer 
	versions of libgda.

2009-02-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db_table_data.[h|cc]: Added get_row_selected() virtual function, 
	used in record_new() instead of an always-null TreeModel::iterator.
	This lets lookups, default values, and calculated values be seen when 
	adding new list records or related records.
	* glom/mode_data/box_data_list.[h|cc]: 
	* glom/utility_widgets/db_adddel/db_adddel.[h|cc]: 
	Added get_row_selected() overrides.
	This should fix bug #569722 (Johannes Schmid)

2009-02-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc: query_execute_select(), query_execute(): 
	When using --debug_sql, use Statement::to_sql() to show the actual 
	SQL with actual values, though this does not seem to work for 
	non-SELECT queries.
	* glom/mode_data/box_data.cc: refresh_related_fields(): Some extra 
	error checking.

2009-02-02  Murray Cumming  <murrayc@murrayc.com>>

	* glom/base_db.cc: :set_field_value_in_database(): Correct a 
	copy/paste typo that was probably introduced when switching to using 
	parameters, so we now actually specify the primary key, so we really 
	change the data in the database.

2009-01-31  Johannes Schmid  <jschmid@openismus.com>

	* glom/application.cc (on_document_load()):
	Reinit cancelled state and some more cleanups.
	Fixes #569721 – Glom behaves strange when you cancel the new dialog

2009-01-30  Murray Cumming  <murrayc@murrayc.com>

	* glom/glom.glade: Make the labels FILL and EXPAND so they really 
	align left instead of centering. This broke when I resaved with a 
	newer glade-2.

2009-01-30  Murray Cumming  <murrayc@murrayc.com>

	Added some TODO comments where we would like to use SQL parameters 
	instead of Field::sql(), if we can figure out how to do that for 